--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "arcturus",
-  "packageManager": "yarn@4.9.1"
+  "packageManager": "yarn@4.9.1",
+  "devDependencies": {
+    "nx": "20.8.0"
+  }
 }
