fix: build branches everywhere except main

--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -1,9 +1,8 @@
 name: Build Branch
 on:
   push:
-    branches:
-      - '**'
-      - '!main'
+    branches-ignore:
+      - 'main'
 
 jobs:
   main:
