--- a/.github/actions/install-yarn-dependencies/action.yml
+++ b/.github/actions/install-yarn-dependencies/action.yml
@@ -11,6 +11,10 @@ runs:
         node-version-file: .nvmrc
         cache: 'yarn'
 
+    - name: Enable Corepack
+      shell: bash
+      run: corepack enable
+
     - name: Install Yarn Dependencies
       shell: bash
       run: yarn install --immutable
