--- a/.github/actions/install-yarn-dependencies/action.yml
+++ b/.github/actions/install-yarn-dependencies/action.yml
@@ -5,6 +5,10 @@ description: |
 runs:
   using: 'composite'
   steps:
+    - name: Enable Corepack
+      shell: bash
+      run: corepack enable
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
@@ -12,4 +16,5 @@ runs:
         cache: 'yarn'
 
     - name: Install Yarn Dependencies
+      shell: bash
       run: yarn install --immutable
