--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -21,6 +21,7 @@ jobs:
         run: yarn nx run arcturus:lint:actions
 
   main:
+    name: Lint, Test, Build
     runs-on: ubuntu-latest
     needs: lint-actions
     steps:
