chore: nx and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # build artifacts that should be gitignored
 node_modules
 
+# Cursor IDE settings
+.cursor/
+
 # Swap the comments on the following lines if you wish to use zero-installs
 # In that case, don't forget to run `yarn config set enableGlobalCache false`!
 # Documentation here: https://yarnpkg.com/features/caching#zero-installs
@@ -168,3 +171,6 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
