--- a/games/rock-paper-scissors/database/docker-compose.yml
+++ b/games/rock-paper-scissors/database/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - '5432:5432'
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U rpsuser']
+      test: ['CMD-SHELL', 'pg_isready -U rpsuser -d rpsdb']
       interval: 5s
       timeout: 5s
       retries: 5
